--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ text-align: center;
   color: black;
 }
 .container{
-  background-image: url(/images/akan1.jpg);
+  background-image: url(/images/akan1.JPG);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
